<resources>
    
    <string name="app_name">دول العالم</string>
    <string name="username">اسم المستخدم</string>
    <string name="phone">رقم التليفون</string>
    <string name="password">كلمة المرور</string>
    <string name="userType">نوع الاشتراك</string>
    <string name="tager">تاجر</string>
    <string name="ownerFarm">صاحب مزرعة</string>

    <string name="openDrawer" translatable="false" >open_drawer</string>
    <string name="closeDrawer" translatable="false" >close_drawer</string>

    <string name="mainscreen_title">الرئيسية</string>
    <string name="fram_list">قائمة المزارع</string>
    <string name="no_frams">لا يوجد مزارع لديك</string>
    
    <string name="coutories">دول</string>
    <string name="continents">continents</string>

</resources>
