<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <EditText
            android:id="@+id/mNameET"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:ems="10"
            android:background="@drawable/round_editable_bk"
            android:padding="@dimen/dime_8"
            android:textColorHint="@android:color/darker_gray"
            android:textColor="@android:color/black"
            android:hint="@string/username"
            android:gravity="right"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/mPhoneET"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:ems="10"
            android:inputType="phone"
            android:background="@drawable/round_editable_bk"
            android:padding="@dimen/dime_8"
            android:textColorHint="@android:color/darker_gray"
            android:textColor="@android:color/black"
            android:hint="@string/phone"
            android:gravity="right"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/mNameET" />

        <EditText
            android:id="@+id/mPasswordET"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:ems="10"
            android:background="@drawable/round_editable_bk"
            android:padding="@dimen/dime_8"
            android:textColorHint="@android:color/darker_gray"
            android:textColor="@android:color/black"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:gravity="right"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/mPhoneET" />

        <RadioGroup
            android:id="@+id/mUserType"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/mPasswordET">

            <RadioButton
                android:id="@+id/mTagerRadio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/tager" />

            <RadioButton
                android:id="@+id/mOwnerRadio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/ownerFarm" />
        </RadioGroup>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>